# code-inference-query

./: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml
scripts/: build_dist.sh  install_local.sh  test.sh
src/code_inference_query/: corpus_config.py  indexer.py  search.py  server.py  vector_store.py
tests/: test_search.py  test_server.py
